--- a/src/gateway/pom.xml
+++ b/src/gateway/pom.xml
@@ -50,9 +50,9 @@
                 <version>3.7.1</version>
                 <configuration>
                     <runtimeArtifact>
-                      <groupId>io.openliberty.beta</groupId>
+                      <groupId>io.openliberty</groupId>
                       <artifactId>openliberty-runtime</artifactId>
-                      <version>23.0.0.3-beta</version>
+                      <version>23.0.0.3</version>
                       <type>zip</type>
                     </runtimeArtifact>
                 </configuration>
